--- a/force-app/main/default/layouts/Page__c-Page Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Page__c-Page Layout.layout-meta.xml
@@ -14,6 +14,14 @@
                 <behavior>Required</behavior>
                 <field>Survey__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Required</behavior>
+                <field>Index__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Body__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
