--- a/force-app/main/default/layouts/ResponseElement__c-Response Element Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/ResponseElement__c-Response Element Layout.layout-meta.xml
@@ -14,6 +14,10 @@
                 <behavior>Required</behavior>
                 <field>Response__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Required</behavior>
+                <field>Element_Version__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
