Init apex patterns

--- a/force-app/main/default/layouts/ResponseElement__c-Response Element Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/ResponseElement__c-Response Element Layout.layout-meta.xml
@@ -16,7 +16,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Required</behavior>
-                <field>Element_Version__c</field>
+                <field>ElementVersion__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns/>
