--- a/force-app/main/default/layouts/SurveyPage__c-Survey Page Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/SurveyPage__c-Survey Page Layout.layout-meta.xml
@@ -18,6 +18,10 @@
                 <behavior>Required</behavior>
                 <field>Name</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Required</behavior>
+                <field>Index__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsTopToBottom</style>
