--- a/force-app/main/default/layouts/SurveyVersion__c-Survey Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/SurveyVersion__c-Survey Layout.layout-meta.xml
@@ -178,7 +178,7 @@
     </relatedLists>
     <relatedLists>
         <fields>NAME</fields>
-        <relatedList>Survey_Response__c.Survey_Version__c</relatedList>
+        <relatedList>SurveyResponse__c.Survey_Version__c</relatedList>
     </relatedLists>
     <relatedLists>
         <fields>NAME</fields>
