--- a/force-app/main/default/layouts/Survey__c-Survey Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Survey__c-Survey Layout.layout-meta.xml
@@ -206,7 +206,7 @@
     </relatedLists>
     <relatedLists>
         <fields>NAME</fields>
-        <relatedList>Survey_Response__c.Survey__c</relatedList>
+        <relatedList>SurveyResponse__c.Survey__c</relatedList>
     </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
