--- a/force-app/main/default/layouts/SurveyResponse__c-Survey Response Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/SurveyResponse__c-Survey Response Layout.layout-meta.xml
@@ -12,7 +12,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Required</behavior>
-                <field>Survey_Version__c</field>
+                <field>SurveyVersion__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
